<resources>
    <string name="app_name">GpsTracker</string>
    <string name="home">home</string>
    <string name="tracks">tracks</string>
    <string name="settings">settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_time">Update time</string>
    <string name="update_time_summary">location update time</string>
    <string name="color_track">Track color</string>
    <string name="color_track_summary">Location track color</string>
    <string name="location">Location</string>
    <string name="location_dialog_title">Location disable</string>
    <string name="location_dialog_message">Do you want enable GPS?</string>
</resources>