<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/location">

        <ListPreference
            android:defaultValue="3000"
            android:entries="@array/loc_time_update_name"
            android:entryValues="@array/loc_time_update_value"
            android:icon="@drawable/ic_time_update"
            android:key="update_time_key"
            android:summary="@string/update_time_summary"
            android:title="@string/update_time" />
        <ListPreference
            android:defaultValue="#CCFF0000"
            android:entries="@array/color_name"
            android:entryValues="@array/color_value"
            android:icon="@drawable/ic_color"
            android:key="color_key"
            android:summary="@string/color_track_summary"
            android:title="@string/color_track" />
    </PreferenceCategory>
</PreferenceScreen>